@@ -1,0 +1,1 @@
+{"__CLASS__":"npg_qc::autoqc::results::interop","composition":{"__CLASS__":"npg_tracking::glossary::composition","components":[{"__CLASS__":"npg_tracking::glossary::composition::component::illumina","id_run":22833,"position":1}]},"info":{"Check":"npg_qc::autoqc::checks::interop","Check_version":"0","Custom_parser":"npg_qc::illumina::interop::parser","Custom_parser_version":"0"},"metrics":{"aligned_mean":{"1":0.746997254590193},"aligned_stdev":{"1":0.0304807482579167},"cluster_count_mean":4091904,"cluster_count_pf_mean":3121136.52840909,"cluster_count_pf_stdev":35124.2526587081,"cluster_count_pf_total":2197280116,"cluster_count_stdev":0,"cluster_count_total":2880700416,"cluster_density_mean":2961263.95700836,"cluster_density_pf_mean":2258730.68050473,"cluster_density_pf_stdev":25419.018485059,"cluster_density_stdev":4.65992365406662e-09,"cluster_pf_mean":76.2758981737863,"cluster_pf_stdev":0.85838408375925}}
