@@ -15,6 +15,8 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
    to make these attributes available for results objects that are
    derived directly from the base class.
  - new interop autoqc check
+ - retrieval of interop autoqc check results by SeqQC web app is
+   currently supressed
 
 release 67.5.0
  - npg_qc::illumina::interop::parser - a stand-alone custom parser
